# markers_lib

./: .gitignore  CMakeLists.txt  README.md
example/: test_cam.cpp
markers_lib/: aruco_markers.cpp  markers.cpp  markers.h  solver.h
src/: aruco_markers.cpp  aruco_markers.h  color_marker.h  markers.cpp  markers.h  solver.cpp  solver.h
